# PG-OOP-2023_24

./: .gitignore  1.cpp  CMakeLists.txt  ExampleClass.h  FiguraPlaska.h  FtxMyDisplay.hpp  Prostokat.h  README.md  RhombusBoard.java  SquareBoard.java  TestChessBoard.java  casheCmake.sh  hextest.py  main.cpp  old.py  wynik.txt
.devcontainer/: Dockerfile  cleanGIT.md  devcontainer.json  inputtext.md
Archive/Stack/: DoublyLinkedList_Template.h  Stack.h
CPP_Project_to_port_to_java/Saves/: human.json  lis.json
CPP_Project_to_port_to_java/Simulator/: Tile.hpp
CPP_Project_to_port_to_java/Utils/: FileHandler.hpp
Project/: 1main.cpp  Book.cpp  Book.h  Converter.h  DoublyLinkedList_Template.h  ExampleClass.cpp  FiguraPlaska.cpp  FiguraPlaska.h  GUI.java  GlobalSettings.py  GridOfButtons.java  HexagonalGridOfButtons.java  Kolo.cpp  Kolo.h  Library.cpp  Library.h  Main.java  ONPcalc.cpp  ONPcalc.h  Person.java  Prostokat.cpp  Prostokat.h  Queue.h  Reader.cpp  Reader.h  Stack.h  Token.cpp  Token.h  Trojkat.cpp  Trojkat.h  input.txt  main.cpp  main.py  old_gui.java  organisms.json  person.py  pom.xml  save.json  ui.md  ui_example.cpp
Project/FiguryPlaske/: Trojkat.h
Project/FiguryPlaskie/: FiguraPlaska.h  Kolo.cpp  Prostokat.cpp  Prostokat.h  Trapez.cpp  Trapez.h  Trojkat.cpp  Trojkat.h
Project/LinkedList/: DoublyLinkedList.cpp  DoublyLinkedList.h  DoublyLinkedList_Template.h
Project/Saves/: 122.json  big.json  ded.json  hex.json  java.json  null.json  oddanie.json  save.json  smal.json  smol.json  test.json  test2.json  world.json
Project/Simulator/: GlobalSettings.hpp  GlobalSettings.java  GlobalSettings.py  HexWorld.java  Position.hpp  Tile.cpp  Tile.hpp  Tile.java  Tile.py  World.cpp  World.hpp  World.java  World.py
Project/Stack/: DoublyLinkedList_Template.h  Stack.h
Project/Utils/: Controler.hpp  Controller.cpp  Controller.hpp  Controller.java  Display.cpp  Display.hpp  Display.java  DynamicDirections.java  DynamicDirections.py  FileHandler.hpp  FileHandler.java  FileHandler.py  FtxMyDisplay.hpp  GUI.java  OrganismFactory.java  OrganismFactory.py  RNG.hpp  RNG.java  RandGen.cpp  RandGen.hpp
Project0/FiguryPlaskie/: Trojkat.cpp  Trojkat.h
Project_c++/Saves/: test.json
Project_c++/Simulator/: GlobalSettings.hpp
Project_c++/Utils/: OrganismFactory.hpp
(+139 files in other folders)
